# Personal_LLM_Assistant

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  test_gradio.py  test_multiturn.py  test_tools.py
app/: config.py  web_ui.py
app/api/: dependencies.py  main.py
app/api/middleware/: rate_limit.py
app/api/routes/: admin.py  chat.py  conversation.py  document.py
app/core/document/: chunker.py  embedder.py  ingestor.py  parser.py
app/core/graph/: checkpointer.py  graph.py  state.py
app/core/graph/nodes/: rerank.py  respond.py  retrieve.py  rewrite.py
app/core/llm/: _openai_compat.py  base.py  deepseek.py  registry.py  tongyi.py  tongyi_vlm.py  zhipu.py
app/core/retrieval/: bm25_index.py  dense_store.py  evaluator.py  hybrid_retriever.py  reranker.py
app/db/: models.py  sessions.py
eval/: eval_rewrite.py  generate_dataset.py  llm_judge.py  metrics.py  rewrite_dataset.jsonl  run_eval.py  run_full_eval.py  run_full_gpu.py  run_one_shot.py  run_quick_eval.py  run_retrieval_eval.py
eval/prompts/: dataset_gen.txt  faithfulness.txt
eval/results/: full_gpu_eval.json  one_shot_eval.json
lecture/: yh.txt
notebooks/: core_code_cheatsheet.ipynb  walkthrough.ipynb
scripts/: ingest_docs.py
src/: 01_hello_llm.py  02_embeddings.py  03_rag_chroma.py  04_full_rag.py  05_prepare_dataset.py  06_train_lora.py  07_test_lora.py  08_vision_llm.py  08b_multimodal_rag.py  08c_end_to_end_vision_rag.py  09_web_ui.py  10_agent_tool_calling.py
tests/: test_api.py  test_graph.py  test_retrieval.py
